plugins {
    id 'base'
    id 'idea'
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'ru.nursafin'
version = '1.0-SNAPSHOT'

ext {
    lombokVersion = '1.18.44'
    junitVersion = '5.10.0'
    mockitoVersion = '5.23.0'
}

subprojects {
    apply plugin: 'java-library'

    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(23)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    test {
        useJUnitPlatform()
        testLogging {
            events 'passed', 'skipped', 'failed'
        }
    }

    dependencies {
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.43'

    }
}
